--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <img src="./img/portal.gif" alt="portal" class="portal">
         <div class="button">
-            <a href="./1" id="startButton">Начинаем</a>
+            <a href="https://tienbot1.github.io/42-XXELETI/" id="startButton">Начинаем</a>
         </div>
     </div>
     <script src="script.js"></script>
