add portalGun & effects

--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     <div class="container">
         <img src="./img/portal.gif" alt="portal" class="portal">
         <div class="button">
-            <a href="./42-XXELETI/" id="startButton">Начинаем</a>
+            <a href="./1" id="startButton">Начинаем</a>
         </div>
+        
+        <div class="portalGun">
+            <div class="portalGunContent">
+                <img src="./portalgun.png" alt="portalGun">
+                <div class="glowing"></div>
+                <div class="portalGunBtn"></div>
+            </div>
+        </div>
+    
     </div>
     <script src="script.js"></script>
 </body>
