--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="button">
             <a href="./42-XXELETI/ " id="startButton">Начинаем</a>
         </div>
+        <p class="message">Открой портал</p>
         
         <div class="portalGun">
             <div class="portalGunContent">
